fix layer bug